@@ -5,27 +5,41 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 
+/**
+ * Mit der Logger Klasse kann man Loggen.
+ */
 public class logger {
-    String filePath;
+    private String filePath;
 
+    /**
+     * Constructor
+     * @param filePath
+     */
     public logger (String filePath) {
         this.filePath = filePath;
     }
 
+    /**
+     * Schreibt den mitgegebenen Text
+     * @param text
+     * @throws IOException
+     */
     public void log (String text) throws IOException {
-        Files.write(Paths.get(filePath), text.getBytes());
+        text = Files.readString(Paths.get(filePath))  + "\n" + text;
+                Files.write(Paths.get(filePath), text.getBytes());
     }
 
-    public String getFilePath() throws myexception {
+    /**
+     * Holt den Pfad der Log-Datei aus der Config.
+     * @return
+     */
+    public String getFilePath() {
         try {
             if (!Files.exists(Path.of(filePath))) {
                 throw new myexception(
                         "Incorrect filepath : " + filePath);
             }
             return Files.readString(Paths.get("config.txt"));
-        }
-        catch (myexception be) {
-            throw be;
         }
         catch (Exception ex) {
             return null;
